monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A2008/A2008a.mc4

/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A2008;

grammar A2008a {

    A = "a";
    B = as:A* A*;
}